--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -9,6 +9,9 @@
   "ConnectionStrings":{
     "DefaultConnection": "Data source=skinet.db"
   },
-
+  
+    "ApiUrl":"http://localhost:5000/",
+  
   "AllowedHosts": "*"
+
 }
