--- a/client/angular.json
+++ b/client/angular.json
@@ -28,9 +28,8 @@
               "src/assets"
             ],
             "styles": [
-              "./node_modules/bootstrap/dist/css/boostrap.min.css",
-              "./node_modules/ngx-bootstrap/datepicker/bs-datapicker.min.css",
-              "./node_modules/font-awesome/css/font-awesome.min.css",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/font-awesome/css/font-awesome.min.css",
               "src/styles.scss"
             ],
             "scripts": []
@@ -98,7 +97,7 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
+             
             ],
             "scripts": []
           }
